--- a/index.html
+++ b/index.html
@@ -1,29 +1,8 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Pauline Kelly</title>
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there, I'm Pauline!</h1>
-				<p>I'm passionate about learning and technology. More about me <a href="/about">here.</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:pauline.m.kelly1@gmail.com">email</a></li>
-        		<li><a href="https://github.com/sebbenbear">github.com/sebbenebear</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+        <h1>Hi there, I'm Pauline!</h1>
+        <p>I'm passionate about learning and technology. More about me <a href="/about">here.</a></p>
+</div><!-- /.blurb -->
