--- a/cv/index.html
+++ b/cv/index.html
@@ -1,1 +1,15 @@
 
+---
+layout: default
+title: CV
+---
+<div class="blurb">
+	<h1>CV</h1>
+  <ul>
+    <li>Graduate Engineer - Ericsson </li>
+    <li>Graduate Developer - Terrapages</li>
+    <li>Software Engineer - Atomic </li>
+    <li>Internal Support Engineer - Solnet</li>
+    <li> </li>
+  </ul>
+</div>
