--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: Pauline Kelly
 ---
 <div class="blurb">
-        <h1>Hi there, I'm Pauline!</h1>
+        <h1>Pauline Kelly</h1>
         <p>I'm passionate about learning and technology. More about me <a href="/about">here.</a></p>
 </div><!-- /.blurb -->
