--- a/cv/index.html
+++ b/cv/index.html
@@ -4,10 +4,7 @@ title: CV
 ---
 <div class="blurb">
 	<h1>CV</h1>
-  <ul>
-    <li>Graduate Engineer - Ericsson </li>
-    <li>Graduate Developer - Terrapages</li>
-    <li>Software Engineer - Atomic </li>
-    <li>Internal Support Engineer - Solnet</li>
-  </ul>
+	<h3>Feb 2017 - Current: Ericsson Graduate Program</h3>
+	<p>I have had 2 rotations in the Ericsson Graduate program so far. The first rotation as a Data Analyst for NBN Managed
+		Services, and the second as a Solution Architect for the Customer Adaptation Centre.</p>
 </div>
