Update list of skills I'm interested in

--- a/cv/index.html
+++ b/cv/index.html
@@ -8,3 +8,32 @@ title: CV
 	<p>I have had 2 rotations in the Ericsson Graduate program so far. The first rotation as a Data Analyst for NBN Managed
 		Services, and the second as a Solution Architect for the Customer Adaptation Centre.</p>
 </div>
+
+<h2>List of skills and languages I want to improve and/or gain expertise in</h2>
+<p>
+Python
+JavaScript
+Java
+SQL
+
+Data Structures and Algorithms
+Software Design
+Database Design
+TCP/IP and network programming
+Object-oriented programming
+Machine learning
+Natural language processing
+Compilers
+Unix/Linux environments
+Modern web development (Angular, React)
+Debugging
+Test automation
+Refactoring code
+Test-driven development
+Build infrastructure
+Optimizing software
+Distributed and parallel systems
+Building tools
+Testing frameworks
+Developing large software systems
+</p>
