--- a/cv/index.html
+++ b/cv/index.html
@@ -10,30 +10,29 @@ title: CV
 </div>
 
 <h2>List of skills and languages I want to improve and/or gain expertise in</h2>
-<p>
-Python
-JavaScript
-Java
-SQL
-
-Data Structures and Algorithms
-Software Design
-Database Design
-TCP/IP and network programming
-Object-oriented programming
-Machine learning
-Natural language processing
-Compilers
-Unix/Linux environments
-Modern web development (Angular, React)
-Debugging
-Test automation
-Refactoring code
-Test-driven development
-Build infrastructure
-Optimizing software
-Distributed and parallel systems
-Building tools
-Testing frameworks
-Developing large software systems
-</p>
+<ul>
+	<li>Python</li>
+	<li>JavaScript</li>
+	<li>Java</li>
+	<li>SQL</li>
+	<li>Data Structures and Algorithms</li>
+	<li>Software Design</li>
+	<li>Database Design</li>
+	<li>TCP/IP and network programming</li>
+	<li>Object-oriented programming</li>
+	<li>Machine learning</li>
+	<li>Natural language processing</li>
+	<li>Compilers</li>
+	<li>Unix/Linux environments</li>
+	<li>Modern web development (Angular, React)</li>
+	<li>Debugging</li>
+	<li>Test automation</li>
+	<li>Refactoring code</li>
+	<li>Test-driven development</li>
+	<li>Build infrastructure</li>
+	<li>Optimizing software</li>
+	<li>Distributed and parallel systems</li>
+	<li>Building tools</li>
+	<li>Testing frameworks</li>
+	<li>Developing large software systems</li>
+</ul>
