Create more detailed about page

--- a/about/index.html
+++ b/about/index.html
@@ -3,6 +3,12 @@ layout: default
 title: About
 ---
 <div class="blurb">
-	<h1>About</h1>
-  <p>Hi there! I started out doing Computer Science a few years ago, when I realised I wasn't in a job I wanted to be in.</p>
+  <h1>About</h1>
+  
+  <p>I didn't have any inspiring role models or exposure to computer science at high school, and didn't really know anything about programming until a few years ago.</p>
+  <p>I had almost finished my biotechnology degree, when a friend showed me some code that he'd been working on as part of his Computer Science degree. I was curious and asked what it was, and he suggested doing a first year course at university as an elective.</p>
+  <p>"Introduction to Computer Program Design" was a completely different way of thinking for me, and it was really challenging! However, the problem solving combined with the expression of creativity was really exciting and somewhat addictive. However, I decided that I'd finish up my current degree, and get into the industry to start paying back my student loan.</p>
+  <p>Fast forward a year - my current role as a microbiology lab technician was very repetitive, and there wasn't enough challenge to keep me satisfied. I began doing more online coding courses after work, and shortly thereafter decided I wanted to gain a solid understanding of computer science. I left that job to do my Computer Science degree, which was much better fit for me. I really enjoyed my courses, met some incredible, like-minded people, and had an unforgettable experience.</p>
+  <p>The internships that I gained through Summer of Tech durng my study were really amazing opportunities, and I am continually inspired by my mentors and friends. After moving to Sydney to finish my last semester at the University of New South Wales, I am now participating in Ericsson's graduate program.</p>
+  <p>I've had an incredible journey so far, and appreciate the care and support of the people who helped me get where I am today.</p>
 </div>
