Change nav to have new structure

--- a/experience/index.html
+++ b/experience/index.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: CV
+title: Experience
 ---
 <div class="blurb">
-	<h1>CV</h1>
+	<h1>Experience</h1>
 	<h3>Feb 2017 - Current: Ericsson Graduate Program</h3>
 	<p>I have had 2 rotations in the Ericsson Graduate program so far. The first rotation as a Data Analyst for NBN Managed
 		Services, and the second as a Solution Architect for the Customer Adaptation Centre.</p>
