--- a/projects/index.html
+++ b/projects/index.html
@@ -6,5 +6,5 @@ title: Projects
   {% for item in site.projects %}
 	<h2>{{ item.title }}</h2>
 	<!-- <p>{{ item.description }}</p> -->
-	<p><a href="{{ item.url }}">{{ item.title }}</a></p>
+	<p><a href="{{ item.url }}">{{ Go to overview }}</a></p>
   {% endfor %}
