--- a/projects/index.html
+++ b/projects/index.html
@@ -4,7 +4,6 @@ title: Projects
 ---
   <h1>Projects</h1>
   {% for item in site.projects %}
-	<h2>{{ item.title }}</h2>
+	<h2><a href="{{ item.url }}">{{ item.title }}</a></h2>
 	<!-- <p>{{ item.description }}</p> -->
-	<p><a href="{{ item.url }}">{{ item.title }}</a></p>
   {% endfor %}
