--- a/projects/index.html
+++ b/projects/index.html
@@ -5,5 +5,5 @@ title: Projects
   <h1>Projects</h1>
   {% for item in site.projects %}
 	<h2><a href="{{ item.url }}">{{ item.title }}</a></h2>
-	<!-- <p>{{ item.description }}</p> -->
+	<p>{{ item.description }}</p>
   {% endfor %}
