add education data

--- a/education/index.html
+++ b/education/index.html
@@ -4,4 +4,34 @@ title: Education
 ---
 <div class="blurb">
 	<h1>Education</h1>
+
+	<div>
+		<h2>Recurse Center</h2>
+		<p>New York, USA</p>
+		<p>Jul 2018 - Sep 2018</p>
+		<ul>
+			<li>Analyse personal social media data using NLTK, Python and Jupyter Notebook</li>
+			<li>Create a CRUD glossary application, using React and Firebase</li>
+			<li>Create generative art and small games, using Processing (Java) and Javascript</li>
+		</ul>
+	</div>
+
+	<div>
+		<h2>Non-Award Program, Computer Science</h2>
+		<p>University of New South Wales, Sydney</p>
+		<p>Mar 2016 - Jun 2016</p>
+	</div>
+
+	<div>
+		<h2>Bachelor of Science, Computer Science</h2>
+		<p>Victoria University of Wellington, New Zealand</p>
+		<p>2014 – 2016</p>
+	</div>
+
+	<div>
+		<h2>Bachelor of Science, Biotechnology</h2>
+		<p>Victoria University of Wellington, New Zealand</p>
+		<p>2009 – 2012</p>
+	</div>
+
 </div>
